--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">index</a></li>
+				<li><a href="resume.html">My Resume</a></li>
 			
 			
 			</ul>
