--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,8 @@
 	<header>
 		<nav>
 			<ul>
-			
+				<li><a href="index.html">index</a></li>
+				<li><a href="resume.html">My Resume</a></li>
 			
 			
 			</ul>
