--- a/resume.html
+++ b/resume.html
@@ -17,4 +17,5 @@
 		</nav>
 	</header>
 		<h1>Allen Domalik</h1>
-		<P>hi i am allen hello</p>
+		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
+		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
