--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
 		</nav>
 	</header>
 		<h1>Allen Domalik</h1>
-		<P></p>
+		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
+		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
