--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 		<nav>
 			<ul>
 				<li><a href="resume.html">My Resume</a></li>
-			
+				<li><a href="index.html">Home Page</a></li>
 			
 			</ul>
 		</nav>
