--- a/resume.html
+++ b/resume.html
@@ -17,4 +17,5 @@
 	</header>
 		<h1>Allen Domalik</h1>
 		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
+		<h2>Summary</h2>
 		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
