--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -9,13 +9,13 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="resume.html">My Resume</a></li>
+				<li><a href="rockclimbing.html">Rock Climbing</a></li>
 				<li><a href="index.html">Home Page</a></li>
 			
 			</ul>
 		</nav>
 	</header>
 		<h1>Allen Domalik</h1>
-		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
+		<p>i like climbing</p>
 		<h2>Summary</h2>
-		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
+		
