--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="resume.html">My Resume</a></li>
+				<li><a href="rockclimbing.html">Rock Climbing</a></li>
 				<li><a href="index.html">Home Page</a></li>
 			
 			
