--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -10,7 +10,7 @@
 		<nav>
 			<ul>
 				<li><a href="rockclimbing.html">Rock Climbing</a></li>
-				<li><a href="index.html">Home Page</a></li>
+				<li><a href="index.html">Resume</a></li>
 			
 			</ul>
 		</nav>
