added summary of climbing

--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -15,7 +15,7 @@
 			</ul>
 		</nav>
 	</header>
-		<h1>Allen Domalik</h1>
-		<p>i like climbing</p>
+		<h1>Rock Climbing</h1>
+		<p>Rock climbing is one hobby I enjoy doing and it really gets your body and mind moving. It's more then just climbing a wall, its the tests your strength and strategies of making it to the top.</p>
 		<h2>Summary</h2>
 		
