added the types of climbs

--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -16,6 +16,12 @@
 		</nav>
 	</header>
 		<h1>Rock Climbing</h1>
-		<p>Rock climbing is one hobby I enjoy doing and it really gets your body and mind moving. It's more then just climbing a wall, its the tests your strength and strategies of making it to the top.</p>
-		<h2>Summary</h2>
+		<p>Rock climbing is one hobby I enjoy doing and it really gets your body and mind moving. It's more then just climbing a wall, it the tests your strength and strategies of making it to the top.</p>
+		<h2>Types of climbs</h2>
+		<p>There are many types of climbs such as:</p>
+			<ul> 
+				<p>Boldering</P>
+				<p>Cable climb</p>
+				<p>Solo climb</p>
+				<p>etc.</p>
 		
