trying to add picture

--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -20,8 +20,10 @@
 		<h2>Types of climbs</h2>
 		<p>There are many types of climbs such as:</p>
 			<ul> 
-				<p>Boldering</P>
+				<p>Bouldering</P>
 				<p>Cable climb</p>
 				<p>Solo climb</p>
 				<p>etc.</p>
-		
+			</ul>
+		<h2>Bouldering</h2>
+		<img src="images/bouldering.jpg" alt="Bouldering">
