--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -29,4 +29,5 @@
 		<h2>Bouldering</h2>
 		<img src="images/bouldering.jpg" alt="Bouldering">
 		<p>Bouldering is more focused on technique and strength due from the fact that you have to think about the best route to take and how effiecient it is for you to reach the top.</p>
-		<p>Bouldering walls are smaller compared to other walls because they test your skills and performance with the use of no cables. Yes that's another difference is that bouldering walls have no cables.
+		<p>Bouldering walls are smaller compared to other walls because they test your skills and performance with the use of no cables. Yes that's another difference with bouldering walls they have no cables.</p>
+		<img src="images/
