--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -31,3 +31,6 @@
 		<p>Bouldering is more focused on technique and strength due from the fact that you have to think about the best route to take and how effiecient it is for you to reach the top.</p>
 		<p>Bouldering walls are smaller compared to other walls because they test your skills and performance with the use of no cables. Yes that's another difference with bouldering walls they have no cables.</p>
 		<img src="images/cable.jpg" alt="Cable">
+		<h2>Cable Climbing</h2>
+		<p>Cable climbing walls require gear such as a harness to climb because the walls are very high and require rope to help you stay on.</p>
+		<p>These walls test you more on stamina since its a long climb up and not that much on skills and technique.
