--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -19,7 +19,7 @@
 		<p>Rock climbing is one hobby I enjoy doing and it really gets your body and mind moving. It's more then just climbing a wall, it the tests your strength and strategies of making it to the top.</p>
 		<p>When you rock climb you have colored coded rock like handles to follow to reach the top. Each route is different based on the levels of difficulty and this can help you know what's your skill level.
 		<h2>Types of climbs</h2>
-		<p>There are many types of climbs such as:</p>
+		<p>There are many types of walls such as:</p>
 			<ul> 
 				<p>Bouldering</P>
 				<p>Cable climb</p>
@@ -34,3 +34,17 @@
 		<h2>Cable Climbing</h2>
 		<p>Cable climbing walls require gear such as a harness to climb because the walls are very high and require rope to help you stay on.</p>
 		<p>These walls test you more on stamina since its a long climb up and not that much on skills and technique.
+		<h2>Gear</h2>
+		<p>When it comes to climbing there are pieces of gear to help your climb such as:</p>
+			<ul>
+				<li>Chalk</li>
+				<li>Chalk Bags</li>
+				<li>Brushes</li>
+				<li>Harness</li>
+				<li>Rope</li>
+				<li>Belay deivce</li>
+				<li>Carabiners</li>
+				<li>Climbing shoes</li>
+				<li>Climbing tabe</li>
+			</ul>
+		
