added bullent points

--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -21,10 +21,10 @@
 		<h2>Types of climbs</h2>
 		<p>There are many types of walls such as:</p>
 			<ul> 
-				<p>Bouldering</P>
-				<p>Cable climb</p>
-				<p>Solo climb</p>
-				<p>etc.</p>
+				<li>Bouldering</li>
+				<li>Cable climb</li>
+				lip>Solo climb</li>
+				<li>etc.</li>
 			</ul>
 		<h2>Bouldering</h2>
 		<img src="images/bouldering.jpg" alt="Bouldering">
