added chalk bag photo and shoes

--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -47,4 +47,5 @@
 				<li>Climbing shoes</li>
 				<li>Climbing tabe</li>
 			</ul>
-		
+		<img src="images/chalkbag.jpg" alt="Chalk Bag">
+		<img src="images/shoes.jpg" alt="Shoes">
