--- a/favoriteanime.html
+++ b/favoriteanime.html
@@ -16,4 +16,4 @@
 		</nav>
 	</header>
 		<h1>Favorite Anime</h1>
-		<p>
+		<p>One of the things I do on my downtime is watch anime. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.
