black clover included

--- a/favoriteanime.html
+++ b/favoriteanime.html
@@ -16,4 +16,7 @@
 		</nav>
 	</header>
 		<h1>Favorite Anime</h1>
-		<p>One of the things I do on my downtime is watch anime. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.
+		<p>One of the things I do on my downtime is watch anime. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
+		<p>Alright starting from number one is Black Clover.</p>
+		<h2>Black Clover</h2>
+		<p>By Yuki Tabata</p>
