--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -11,12 +11,12 @@
 			<ul>
 				<li><a href="rockclimbing.html">Rock Climbing</a></li>
 				<li><a href="index.html">Resume</a></li>
-				<li><a href="favoriteanime.html">Favorite Anime</a></li>
+				<li><a href="favoritemanga.html">Favorite Manga</a></li>
 			</ul>
 		</nav>
 	</header>
-		<h1>Favorite Anime</h1>
-		<p>One of the things I do on my downtime is watch anime. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
+		<h1>Favorite Manga</h1>
+		<p>One of the things I do on my downtime is read manga. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
 		<p>Alright starting from number one is Black Clover.</p>
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
