--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -11,7 +11,7 @@
 			<ul>
 				<li><a href="rockclimbing.html">Rock Climbing</a></li>
 				<li><a href="index.html">Resume</a></li>
-				<li><a href="favoriteanime.html">Favorite Anime</a></li>
+				<li><a href="favoritemanga.html">Favorite Manga</a></li>
 			</ul>
 		</nav>
 	</header>
