--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -17,6 +17,12 @@
 	</header>
 		<h1>Favorite Manga</h1>
 		<p>One of the things I do on my downtime is read manga. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
-		<p>Alright starting from number one is Black Clover.</p>
+		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is </p>
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
+		<img src="image/blackclover.jpg" alt="Blackclover">
+		<p>Black clover is about a world were magic is everything and society is divided with royals and peasants. One day two young boys named Asta and Yuno are dropped off at a church/orphange.</p>
+		<p>As time passes both boys grow up, Yuno gains strong wind magic and Asta has no magic. They both have the same dream of becoming the "wizard king", the highest military position that is looked up by the people in the kingdom.</p>
+		<p>Now Asta knowing he has no magic still pushes to becoming stronger and says his magic is never giving up. Eventually the two head out to get their grimoires(book of spells) and Asta doesn't get his.</p>
+		<p>As more of the plot goes on, Asta does get his grimoire of ant-magic, magic that can cancel out other magic.
+		
