--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -20,7 +20,7 @@
 		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is </p>
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
-		<img src="image/blackc.jpg" alt="Black Clover">
+		<img src="image/black.jpg" alt="Black Clover">
 		<p>Black clover is about a world were magic is everything and society is divided with royals and peasants. One day two young boys named Asta and Yuno are dropped off at a church/orphange.</p>
 		<p>As time passes both boys grow up, Yuno gains strong wind magic and Asta has no magic. They both have the same dream of becoming the "wizard king", the highest military position that is looked up by the people in the kingdom.</p>
 		<p>Now Asta knowing he has no magic still pushes to becoming stronger and says his magic is never giving up. Eventually the two head out to get their grimoires(book of spells) and Asta doesn't get his.</p>
