--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -27,5 +27,5 @@
 		<p>As more of the plot goes on, Asta does get his grimoire of ant-magic, magic that can cancel out other magic. Sooner or later he joins the magic knights known as the Black Bulls. From there he is faced with many challenges.</p>
 		<p>No matter what he faces his magic is never giving up.</p>
 		<h2>Chainsaw Man</h2>
-		
-		
+		<img src="images/chain.jpg" alt="Chainsaw Man">
+		<p>
