--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -28,4 +28,6 @@
 		<p>No matter what he faces his magic is never giving up.</p>
 		<h2>Chainsaw Man</h2>
 		<img src="images/chain.jpg" alt="Chainsaw Man">
+		<p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his demon chainsaw dog. In this world demons are made by people's fears, so if enough people feared something there would be a demon for it.</p>
+		<p>Later on the Yukuza turns on Denji and makes a contract with a zombie devil to make there gang stronger and killing Denji was part of the contract. He gets brutally killed with his chainsaw demon dog and thrown in the dumpster,but Denji's blood falls into the dogs mouth which makes the demon regenerate and becomes Denji's heart.</p>
 		<p>
