--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -29,5 +29,7 @@
 		<h2>Chainsaw Man</h2>
 		<img src="images/chain.jpg" alt="Chainsaw Man">
 		<p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his demon chainsaw dog. In this world demons are made by people's fears, so if enough people feared something there would be a demon for it.</p>
-		<p>Later on the Yukuza turns on Denji and makes a contract with a zombie devil to make there gang stronger and killing Denji was part of the contract. He gets brutally killed with his chainsaw demon dog and thrown in the dumpster,but Denji's blood falls into the dogs mouth which makes the demon regenerate and becomes Denji's heart.</p>
+		<p>Denji's life is very sad he lives in a shed and has to sell some of his organs to help pay off the debt. The only dream he wants in his life is to have a girlfriend, bread with jelly, and having a normal life.</p>
+		<p>Later on the Yukuza betrays on Denji and makes a contract with a zombie devil to make there gang stronger by turning themselves into zombies and killing Denji was part of the contract. He gets brutally killed with his chainsaw demon dog and thrown in the dumpster, but Denji's blood falls onto the dogs mouth which makes the demon regenerate and becomes Denji's heart.</p>
+		<p>In purgatory both Denji and his chainsaw dog meet and the dog tells Denji this is our contract, I want to see your dreams come true. Then Denji is brought back to life, but is suited up with chainsaw arms and has a chainsaw for a head. In short he comes a hybrid of human and demon.</p>
 		<p>
