more plot for chainsaw

--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -28,8 +28,9 @@
 		<p>No matter what he faces his magic is never giving up.</p>
 		<h2>Chainsaw Man</h2>
 		<img src="images/chain.jpg" alt="Chainsaw Man">
-		<p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his demon chainsaw dog. In this world demons are made by people's fears, so if enough people feared something there would be a demon for it.</p>
+		<p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his devil chainsaw dog. In this world devils are made by people's fears, so if enough people feared something there would be a devil for it.</p>
 		<p>Denji's life is very sad he lives in a shed and has to sell some of his organs to help pay off the debt. The only dream he wants in his life is to have a girlfriend, bread with jelly, and having a normal life.</p>
-		<p>Later on the Yukuza betrays on Denji and makes a contract with a zombie devil to make there gang stronger by turning themselves into zombies and killing Denji was part of the contract. He gets brutally killed with his chainsaw demon dog and thrown in the dumpster, but Denji's blood falls onto the dogs mouth which makes the demon regenerate and becomes Denji's heart.</p>
-		<p>In purgatory both Denji and his chainsaw dog meet and the dog tells Denji this is our contract, I want to see your dreams come true. Then Denji is brought back to life, but is suited up with chainsaw arms and has a chainsaw for a head. In short he comes a hybrid of human and demon.</p>
-		<p>
+		<p>Later on the Yukuza betrays on Denji and makes a contract with a zombie devil to make there clan stronger by turning themselves into zombies and killing Denji was part of the contract. He gets brutally killed with his chainsaw devil dog and thrown in the dumpster, but Denji's blood falls onto the dogs mouth which makes the devil regenerate and becomes Denji's heart.</p>
+		<p>In purgatory both Denji and his chainsaw dog meet and the dog tells Denji this is our contract, I want to see your dreams come true. Then Denji is brought back to life, but is suited up with chainsaw arms and has a chainsaw for a head. In short he comes a hybrid of human and devil.</p>
+		<p>Denji then kills the zombie devil and the whole Yukuza clan. The next morning other devil hunters come to kill the zombie devil, but is met with Denji. Denji then collapse and is caught by one of the hunters named Makima and is turned back to normal.</p>
+		
