author for chain

--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -27,6 +27,7 @@
 		<p>As more of the plot goes on, Asta does get his grimoire of ant-magic, magic that can cancel out other magic. Sooner or later he joins the magic knights known as the Black Bulls. From there he is faced with many challenges.</p>
 		<p>No matter what he faces his magic is never giving up.</p>
 		<h2>Chainsaw Man</h2>
+		<p>By Tatsuki Fujimoto</p>
 		<img src="images/chain.jpg" alt="Chainsaw Man">
 		<p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his devil chainsaw dog. In this world devils are made by people's fears, so if enough people feared something there would be a devil for it.</p>
 		<p>Denji's life is very sad he lives in a shed and has to sell some of his organs to help pay off the debt. The only dream he wants in his life is to have a girlfriend, bread with jelly, and having a normal life.</p>
