--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -17,7 +17,7 @@
 	</header>
 		<h1>Favorite Manga</h1>
 		<p>One of the things I do on my downtime is read manga. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
-		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is </p>
+		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is Jujustu Kaisen.</p>
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
 		<img src="images/black.jpg" alt="Black Clover">
