--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -17,7 +17,7 @@
 	</header>
 		<h1>Favorite Manga</h1>
 		<p>One of the things I do on my downtime is read manga. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
-		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is Jujustu Kaisen.</p>
+		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is Dragonball Z/super.</p>
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
 		<img src="images/black.jpg" alt="Black Clover">
@@ -34,4 +34,7 @@
 		<p>Later on the Yukuza betrays on Denji and makes a contract with a zombie devil to make there clan stronger by turning themselves into zombies and killing Denji was part of the contract. He gets brutally killed with his chainsaw devil dog and thrown in the dumpster, but Denji's blood falls onto the dogs mouth which makes the devil regenerate and becomes Denji's heart.</p>
 		<p>In purgatory both Denji and his chainsaw dog meet and the dog tells Denji this is our contract, I want to see your dreams come true. Then Denji is brought back to life, but is suited up with chainsaw arms and has a chainsaw for a head. In short he comes a hybrid of human and devil.</p>
 		<p>Denji then kills the zombie devil and the whole Yukuza clan. The next morning other devil hunters come to kill the zombie devil, but is met with Denji. Denji then collapse and is caught by one of the hunters named Makima and is turned back to normal.</p>
+		<h3>Dragonball Z/Super</h3>
+		<p>By Akira Toriyama</p>
+		
 		
