--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -36,5 +36,5 @@
 		<p>Denji then kills the zombie devil and the whole Yukuza clan. The next morning other devil hunters come to kill the zombie devil, but is met with Denji. Denji then collapse and is caught by one of the hunters named Makima and is turned back to normal.</p>
 		<h3>Dragonball Z/Super</h3>
 		<p>By Akira Toriyama</p>
-		
+		<img src="images/dragon.jpg" alt="DRagonball Z/Super">
 		
