--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -49,3 +49,9 @@
 			</ul>
 		<img src="images/chalkbag.jpg" alt="Chalk Bag">
 		<img src="images/shoes.jpg" alt="Shoes">
+		<footer>
+			<p>Made by Allen Domalik</p>
+		</footer>
+</body>
+</html>
+		
