--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -17,7 +17,7 @@
 	</header>
 		<h1>Favorite Manga</h1>
 		<p>One of the things I do on my downtime is read manga. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
-		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is Dragonball Z/super.</p>
+		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is Dragonball Z/Super.</p>
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
 		<img src="images/black.jpg" alt="Black Clover">
@@ -37,4 +37,15 @@
 		<h3>Dragonball Z/Super</h3>
 		<p>By Akira Toriyama</p>
 		<img src="images/dragon.jpg" alt="DRagonball Z/Super">
+		<p>Dragonball is one of the longest series I have read because it has about three expansions to it's story. The first being Dragonball then Dragonball Z and now in the recent story being Dragonball Super.</p>
+		<p>Dragonball Z and Super kind of have the same story built plot. Like there is a new arc with a new villian and the fighters have to defeat them. Its the fights that make the story really good.</p>
+		<p>The main character is Goku he is from an alien race called the sayians and was to be the very few to survive the sayian's extinction. He was sent off the planet when he was a baby and was taken in by an old man named Gohan.</p>
+		<p>He was belived to be born human for a long time, but once his brother found him and kidnapped his son. He was told that he wasn't human, but a race of brutal warriors that take and enslave other planets.</p>
+		<p>Goku is a well trained fighter and would do anything to protect his home planet Earth. Later on in Dragonball Z he gained a form called Super Sayian that was to be belived to be a myth in his race's history.</p>
+		<p>There are many more arcs that the story of Goku goes through and this leads into Dragonball Super. Where Goku is facing more stronger foes then the last and he is doing all this to protect his home and friends.</p>
+		<footer>
+			<p>Made by Allen Domalik</p>
+		</footer>
+</body>
+</html>
 		
