--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -17,7 +17,8 @@
 	</header>
 		<h1>Rock Climbing</h1>
 		<p>Rock climbing is one hobby I enjoy doing and it really gets your body and mind moving. It's more then just climbing a wall, it the tests your strength and strategies of making it to the top.</p>
-		<p>When you rock climb you have colored coded rock like handles to follow to reach the top. Each route is different based on the levels of difficulty and this can help you know what's your skill level.
+		<p>When you rock climb you have colored coded rock like handles to follow to reach the top. Each route is different based on the levels of difficulty and this can help you know what's your skill level.</p>
+	<div id="TypesClimb">
 		<h2>Types of climbs</h2>
 		<p>There are many types of walls such as:</p>
 			<ul> 
@@ -26,6 +27,7 @@
 				lip>Solo climb</li>
 				<li>etc.</li>
 			</ul>
+	</div>
 		<h2>Bouldering</h2>
 		<img src="images/bouldering.jpg" alt="Bouldering">
 		<p>Bouldering is more focused on technique and strength due from the fact that you have to think about the best route to take and how effiecient it is for you to reach the top.</p>
