--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -24,7 +24,7 @@
 			<ul> 
 				<li>Bouldering</li>
 				<li>Cable climb</li>
-				lip>Solo climb</li>
+				<li>Solo climb</li>
 				<li>etc.</li>
 			</ul>
 	</div>
