--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -15,9 +15,11 @@
 			</ul>
 		</nav>
 	</header>
+	<div id="FavoriteManga">
 		<h1>Favorite Manga</h1>
 		<p>One of the things I do on my downtime is read manga. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
 		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is Dragonball Z/Super.</p>
+	</div>
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
 		<img src="images/black.jpg" alt="Black Clover">
