--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -20,6 +20,7 @@
 		<p>One of the things I do on my downtime is read manga. I've seen quite a handful of different genres of anime,so it will be hard to make a list of my top three favorites.</p>
 		<p>Alright starting from number one is Black Clover. Second is Chainsaw Man and in third is Dragonball Z/Super.</p>
 	</div>
+	<div id="BlackClover">
 		<h2>Black Clover</h2>
 		<p>By Yuki Tabata</p>
 		<img src="images/black.jpg" alt="Black Clover">
@@ -28,6 +29,8 @@
 		<p>Now Asta knowing he has no magic still pushes to becoming stronger and says his magic is never giving up. Eventually the two head out to get their grimoires(book of spells) and Asta doesn't get his.</p>
 		<p>As more of the plot goes on, Asta does get his grimoire of ant-magic, magic that can cancel out other magic. Sooner or later he joins the magic knights known as the Black Bulls. From there he is faced with many challenges.</p>
 		<p>No matter what he faces his magic is never giving up.</p>
+	</div>
+	<div id="ChainsawMan">
 		<h2>Chainsaw Man</h2>
 		<p>By Tatsuki Fujimoto</p>
 		<img src="images/chain.jpg" alt="Chainsaw Man">
@@ -36,6 +39,8 @@
 		<p>Later on the Yukuza betrays on Denji and makes a contract with a zombie devil to make there clan stronger by turning themselves into zombies and killing Denji was part of the contract. He gets brutally killed with his chainsaw devil dog and thrown in the dumpster, but Denji's blood falls onto the dogs mouth which makes the devil regenerate and becomes Denji's heart.</p>
 		<p>In purgatory both Denji and his chainsaw dog meet and the dog tells Denji this is our contract, I want to see your dreams come true. Then Denji is brought back to life, but is suited up with chainsaw arms and has a chainsaw for a head. In short he comes a hybrid of human and devil.</p>
 		<p>Denji then kills the zombie devil and the whole Yukuza clan. The next morning other devil hunters come to kill the zombie devil, but is met with Denji. Denji then collapse and is caught by one of the hunters named Makima and is turned back to normal.</p>
+	</div>
+	<div id="Dragonball">
 		<h3>Dragonball Z/Super</h3>
 		<p>By Akira Toriyama</p>
 		<img src="images/dragon.jpg" alt="DRagonball Z/Super">
@@ -45,6 +50,7 @@
 		<p>He was belived to be born human for a long time, but once his brother found him and kidnapped his son. He was told that he wasn't human, but a race of brutal warriors that take and enslave other planets.</p>
 		<p>Goku is a well trained fighter and would do anything to protect his home planet Earth. Later on in Dragonball Z he gained a form called Super Sayian that was to be belived to be a myth in his race's history.</p>
 		<p>There are many more arcs that the story of Goku goes through and this leads into Dragonball Super. Where Goku is facing more stronger foes then the last and he is doing all this to protect his home and friends.</p>
+	</div>
 	<footer>
 		<p>Made by Allen Domalik</p>
 	</footer>
