--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -28,14 +28,19 @@
 				<li>etc.</li>
 			</ul>
 	</div>
+	<div id="BoulderingClimb">
 		<h2>Bouldering</h2>
 		<img src="images/bouldering.jpg" alt="Bouldering">
 		<p>Bouldering is more focused on technique and strength due from the fact that you have to think about the best route to take and how effiecient it is for you to reach the top.</p>
 		<p>Bouldering walls are smaller compared to other walls because they test your skills and performance with the use of no cables. Yes that's another difference with bouldering walls they have no cables.</p>
+	</div>
+	<div id="CableClimb">
 		<h2>Cable Climbing</h2>
 		<img src="images/cable.jpg" alt="Cable">
 		<p>Cable climbing walls require gear such as a harness to climb because the walls are very high and require rope to help you stay on.</p>
-		<p>These walls test you more on stamina since its a long climb up and not that much on skills and technique.
+		<p>These walls test you more on stamina since its a long climb up and not that much on skills and technique.</p>
+	</div>
+	<div id="Gear">
 		<h2>Gear</h2>
 		<p>When it comes to climbing there are pieces of gear to help your climb such as:</p>
 			<ul>
@@ -51,6 +56,7 @@
 			</ul>
 		<img src="images/chalkbag.jpg" alt="Chalk Bag">
 		<img src="images/shoes.jpg" alt="Shoes">
+	<div>
 		<footer>
 			<p>Made by Allen Domalik</p>
 		</footer>
