--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			</ul>
 		</nav>
 	</header>
+<div id="About me">
 		<h1>Allen Domalik</h1>
 		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
 		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
+</div>
