added education and work

--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
 			</ul>
 		</nav>
 	</header>
-<div id="About me">
+<div id="Backhround">
 		<h1>Allen Domalik</h1>
 		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
 		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
 </div>
+<div id="Education">
+		<h1>Education</h1>
+			<ul>
+				<li>High-School diploma(Waukegan High-School)</li>
+				<li>College education(College of Lacke County)</li>
+				<li>Illinois Institute of Technolgoy(Digital Humanities Major)</li>
+			</ul>
+</div>
+<div id="Work">
+		<h2>Work Experience</h2>
+			<ul>
+				<li>Service Master(Part time)</li>
