--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -56,7 +56,7 @@
 			</ul>
 		<img src="images/chalkbag.jpg" alt="Chalk Bag">
 		<img src="images/shoes.jpg" alt="Shoes">
-	<div>
+	</div>
 		<footer>
 			<p>Made by Allen Domalik</p>
 		</footer>
