--- a/index.html
+++ b/index.html
@@ -33,3 +33,9 @@
 		<h2>Work Experience</h2>
 			<ul>
 				<li>Service Master(Part time)</li>
+				<li>Little Ceasers Pizza(Part time)</li>
+				<li>Knauz shuttling at Mercedes dealership(Part time)</li>
+				<li>Amazon Warehouse(Part time)</li>
+			</ul>
+</div>
+<div id="Hobbies">
