--- a/index.html
+++ b/index.html
@@ -39,3 +39,11 @@
 			</ul>
 </div>
 <div id="Hobbies">
+		<h2>Hobbies</h2>
+			<ul>
+				<li>Rock Climbing</li>
+				<li>Bowling</li>
+				<li>DIY designing with gaming consoles</li>
+				<li>Walking</li>
+			</ul>
+</div>
