--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<li>High-School diploma(Waukegan High-School)</li>
 				<li>College education(College of Lacke County)</li>
 				<li>Illinois Institute of Technolgoy(Digital Humanities Major)</li>
+				<li>Northwestern Illinois UI/UX boot camp(future)</li>
 			</ul>
 </div>
 <div id="Work">
@@ -49,4 +50,7 @@
 </div>
 <div id="Goals">
 		<h3>Goals in life</h3>
-		<p>
+		<p>Wanting to graduate with a 3.8 GPA</p>
+		<p>Continue working with websites and interface designing</p>
+		<p>Finding a career that I will be happy working for and to increase my skills and abilities.</p>
+		
