--- a/index.html
+++ b/index.html
@@ -53,4 +53,5 @@
 		<p>Wanting to graduate with a 3.8 GPA</p>
 		<p>Continue working with websites and interface designing</p>
 		<p>Finding a career that I will be happy working for and to increase my skills and abilities.</p>
-		
+		<p>Overall taking a look back and appreciate the long road I had to take to make it.</p>
+</div>
