--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 			</ul>
 		</nav>
 	</header>
-<div id="Backhround">
+	<div id="Backhround">
 		<h1>Allen Domalik</h1>
 		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
 		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
-</div>
-<div id="Education">
+	</div>
+	<div id="Education">
 		<h1>Education</h1>
 			<ul>
 				<li>High-School diploma(Waukegan High-School)</li>
@@ -29,8 +29,8 @@
 				<li>Illinois Institute of Technolgoy(Digital Humanities Major)</li>
 				<li>Northwestern Illinois UI/UX boot camp(future)</li>
 			</ul>
-</div>
-<div id="Work">
+	</div>
+	<div id="Work">
 		<h2>Work Experience</h2>
 			<ul>
 				<li>Service Master(Part time)</li>
@@ -38,8 +38,8 @@
 				<li>Knauz shuttling at Mercedes dealership(Part time)</li>
 				<li>Amazon Warehouse(Part time)</li>
 			</ul>
-</div>
-<div id="Hobbies">
+	</div>
+	<div id="Hobbies">
 		<h2>Hobbies</h2>
 			<ul>
 				<li>Rock Climbing</li>
@@ -47,11 +47,16 @@
 				<li>DIY designing with gaming consoles</li>
 				<li>Walking</li>
 			</ul>
-</div>
-<div id="Goals">
+	</div>
+	<div id="Goals">
 		<h3>Goals in life</h3>
 		<p>Wanting to graduate with a 3.8 GPA</p>
 		<p>Continue working with websites and interface designing</p>
 		<p>Finding a career that I will be happy working for and to increase my skills and abilities.</p>
 		<p>Overall taking a look back and appreciate the long road I had to take to make it.</p>
-</div>
+	</div>
+	<footer>
+		<p>Made by Allen Domalik</p>
+	</footer>
+</body>
+</html>
