--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -35,6 +35,7 @@
 		<h2>Chainsaw Man</h2>
 		<p>By Tatsuki Fujimoto</p>
 		<img src="images/chain.jpg" alt="Chainsaw Man">
+		<iframe width="971" height="546" src="https://www.youtube.com/embed/dFlDRhvM4L0" title="『チェンソーマン』ノンクレジットオープニング / CHAINSAW MAN  Opening│米津玄師 「KICK BACK」" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		<p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his devil chainsaw dog. In this world devils are made by people's fears, so if enough people feared something there would be a devil for it.</p>
 		<p>Denji's life is very sad he lives in a shed and has to sell some of his organs to help pay off the debt. The only dream he wants in his life is to have a girlfriend, bread with jelly, and having a normal life.</p>
 		<p>Later on the Yukuza betrays on Denji and makes a contract with a zombie devil to make there clan stronger by turning themselves into zombies and killing Denji was part of the contract. He gets brutally killed with his chainsaw devil dog and thrown in the dumpster, but Denji's blood falls onto the dogs mouth which makes the devil regenerate and becomes Denji's heart.</p>
