--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -46,6 +46,7 @@
 		<h3>Dragonball Z/Super</h3>
 		<p>By Akira Toriyama</p>
 		<img src="images/dragon.jpg" alt="DRagonball Z/Super">
+		<iframe width="970" height="546" src="https://www.youtube.com/embed/8Ry9f5x3sww" title="Dragon Ball Super Clean Opening 2 V2 [Creditless]  Limit Break x Survivor [Funimation BD-Rip]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		<p>Dragonball is one of the longest series I have read because it has about three expansions to it's story. The first being Dragonball then Dragonball Z and now in the recent story being Dragonball Super.</p>
 		<p>Dragonball Z and Super kind of have the same story built plot. Like there is a new arc with a new villian and the fighters have to defeat them. Its the fights that make the story really good.</p>
 		<p>The main character is Goku he is from an alien race called the sayians and was to be the very few to survive the sayian's extinction. He was sent off the planet when he was a baby and was taken in by an old man named Gohan.</p>
