--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 			</ul>
 		</nav>
 	</header>
+	<section>
 	<div id="Backhround">
 		<h1>Allen Domalik</h1>
 		<p>Waukegan IL, 60087 | adomalik@hawk.iit.edu</p>
 		<P>I am a third year senior and I am looking for a job in UI/UX design</p>
+	</section>
+	<section>
 	</div>
 	<div id="Education">
 		<h1>Education</h1>
@@ -30,6 +33,8 @@
 				<li>Northwestern Illinois UI/UX boot camp(future)</li>
 			</ul>
 	</div>
+	</section>
+	<section>
 	<div id="Work">
 		<h2>Work Experience</h2>
 			<ul>
@@ -39,6 +44,8 @@
 				<li>Amazon Warehouse(Part time)</li>
 			</ul>
 	</div>
+	</section>
+	<section>
 	<div id="Hobbies">
 		<h2>Hobbies</h2>
 			<ul>
@@ -48,6 +55,8 @@
 				<li>Walking</li>
 			</ul>
 	</div>
+	</section>
+	<section>
 	<div id="Goals">
 		<h3>Goals in life</h3>
 		<p>Wanting to graduate with a 3.8 GPA</p>
@@ -55,6 +64,7 @@
 		<p>Finding a career that I will be happy working for and to increase my skills and abilities.</p>
 		<p>Overall taking a look back and appreciate the long road I had to take to make it.</p>
 	</div>
+	</section>
 	<footer>
 		<p>Made by Allen Domalik</p>
 	</footer>
