--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -26,7 +26,7 @@
 	<div id="BlackClover">
 	  <h2>Black Clover</h2>
 	  <p>By Yuki Tabata</p>
-	  <img src="images/black.jpg" alt="Black Clover">
+	  <img src="images/black.jpg" alt="image_Black_Clover">
 	  <iframe width="971" height="546" src="https://www.youtube.com/embed/xj9aaqzKBwM" title="Black Clover Opening 10 | Black Catcher" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	  <p>Black clover is about a world were magic is everything and society is divided with royals and peasants. One day two young boys named Asta and Yuno are dropped off at a church/orphange.</p>
 	  <p>As time passes both boys grow up, Yuno gains strong wind magic and Asta has no magic. They both have the same dream of becoming the "wizard king", the highest military position that is looked up by the people in the kingdom.</p>
@@ -39,7 +39,7 @@
 	<div id="ChainsawMan">
 	  <h2>Chainsaw Man</h2>
 	  <p>By Tatsuki Fujimoto</p>
-	  <img src="images/chain.jpg" alt="Chainsaw Man">
+	  <img src="images/chain.jpg" alt="image_Chainsaw_Man">
 	  <iframe width="971" height="546" src="https://www.youtube.com/embed/dFlDRhvM4L0" title="『チェンソーマン』ノンクレジットオープニング / CHAINSAW MAN  Opening│米津玄師 「KICK BACK」" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	  <p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his devil chainsaw dog. In this world devils are made by people's fears, so if enough people feared something there would be a devil for it.</p>
 	  <p>Denji's life is very sad he lives in a shed and has to sell some of his organs to help pay off the debt. The only dream he wants in his life is to have a girlfriend, bread with jelly, and having a normal life.</p>
@@ -52,7 +52,7 @@
 	<div id="Dragonball">
 	  <h3>Dragonball Z/Super</h3>
 	  <p>By Akira Toriyama</p>
-	  <img src="images/dragon.jpg" alt="DRagonball Z/Super">
+	  <img src="images/dragon.jpg" alt="image_Dragonball_Z_/_Super">
 	  <iframe width="970" height="546" src="https://www.youtube.com/embed/8Ry9f5x3sww" title="Dragon Ball Super Clean Opening 2 V2 [Creditless]  Limit Break x Survivor [Funimation BD-Rip]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	  <p>Dragonball is one of the longest series I have read because it has about three expansions to it's story. The first being Dragonball then Dragonball Z and now in the recent story being Dragonball Super.</p>
 	  <p>Dragonball Z and Super kind of have the same story built plot. Like there is a new arc with a new villian and the fighters have to defeat them. Its the fights that make the story really good.</p>
