--- a/favoritemanga.html
+++ b/favoritemanga.html
@@ -27,7 +27,7 @@
 	  <h2>Black Clover</h2>
 	  <p>By Yuki Tabata</p>
 	  <img src="images/black.jpg" alt="image_Black_Clover">
-	  <iframe src="https://www.youtube.com/embed/xj9aaqzKBwM" title="Black Clover Opening 10 | Black Catcher" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe src="https://www.youtube.com/embed/xj9aaqzKBwM" title="Black Clover Opening 10 | Black Catcher" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	  <p>Black clover is about a world were magic is everything and society is divided with royals and peasants. One day two young boys named Asta and Yuno are dropped off at a church/orphange.</p>
 	  <p>As time passes both boys grow up, Yuno gains strong wind magic and Asta has no magic. They both have the same dream of becoming the "wizard king", the highest military position that is looked up by the people in the kingdom.</p>
 	  <p>Now Asta knowing he has no magic still pushes to becoming stronger and says his magic is never giving up. Eventually the two head out to get their grimoires(book of spells) and Asta doesn't get his.</p>
@@ -40,7 +40,7 @@
 	  <h2>Chainsaw Man</h2>
 	  <p>By Tatsuki Fujimoto</p>
 	  <img src="images/chain.jpg" alt="image_Chainsaw_Man">
-	  <iframe src="https://www.youtube.com/embed/dFlDRhvM4L0" title="『チェンソーマン』ノンクレジットオープニング / CHAINSAW MAN  Opening│米津玄師 「KICK BACK」" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe src="https://www.youtube.com/embed/dFlDRhvM4L0" title="『チェンソーマン』ノンクレジットオープニング / CHAINSAW MAN  Opening│米津玄師 「KICK BACK」" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	  <p>Chainsaw man is about a young man named Denji that works for the Yakuza to pay off his father's debt that he left him to deal with. He becomes a devil hunter with his devil chainsaw dog. In this world devils are made by people's fears, so if enough people feared something there would be a devil for it.</p>
 	  <p>Denji's life is very sad he lives in a shed and has to sell some of his organs to help pay off the debt. The only dream he wants in his life is to have a girlfriend, bread with jelly, and having a normal life.</p>
 	  <p>Later on the Yukuza betrays on Denji and makes a contract with a zombie devil to make there clan stronger by turning themselves into zombies and killing Denji was part of the contract. He gets brutally killed with his chainsaw devil dog and thrown in the dumpster, but Denji's blood falls onto the dogs mouth which makes the devil regenerate and becomes Denji's heart.</p>
@@ -53,7 +53,7 @@
 	  <h3>Dragonball Z/Super</h3>
 	  <p>By Akira Toriyama</p>
 	  <img src="images/dragon.jpg" alt="image_Dragonball_Z_/_Super">
-	  <iframe src="https://www.youtube.com/embed/8Ry9f5x3sww" title="Dragon Ball Super Clean Opening 2 V2 [Creditless]  Limit Break x Survivor [Funimation BD-Rip]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	  <iframe src="https://www.youtube.com/embed/8Ry9f5x3sww" title="Dragon Ball Super Clean Opening 2 V2 [Creditless]  Limit Break x Survivor [Funimation BD-Rip]" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	  <p>Dragonball is one of the longest series I have read because it has about three expansions to it's story. The first being Dragonball then Dragonball Z and now in the recent story being Dragonball Super.</p>
 	  <p>Dragonball Z and Super kind of have the same story built plot. Like there is a new arc with a new villian and the fighters have to defeat them. Its the fights that make the story really good.</p>
 	  <p>The main character is Goku he is from an alien race called the sayians and was to be the very few to survive the sayian's extinction. He was sent off the planet when he was a baby and was taken in by an old man named Gohan.</p>
